# tinytalk

./: .gitignore  CLAUDE.md  LICENSE  README.md  flake.nix  pyproject.toml
nix/: module.nix  tinytalk-prestart.sh
scripts/: encode_reference.py  tune.py  validate.py
tests/: test_api_validation.py  test_audio.py  test_chunking.py  test_health.py  test_reroll.py  test_wer.py
tests/corpus/: abbreviations.txt  digest.txt  initials_and_quotes.txt  long_commas.txt  long_no_punctuation.txt  monologue_annabel_lee.txt  monologue_st_crispins.txt  monologue_to_be.txt  monologue_twain_advice.txt  multi_sentence.txt
tests/integration/: test_real_speech.py
tests/voices/: NOTICE
tinytalk/: audio.py  chunking.py  config.py  engine.py  server.py  wer.py
