[project]
name = "tinytalk"
description = "OpenAI-compatible NeuTTS server for low-power devices"
requires-python = ">=3.12"
dynamic = ["version"]
authors = [{ email = "calebwastler@gmail.com" }]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "numpy",
  "spacy",
  "librosa",
  "praat-parselmouth",
  "neutts[all]",
  "torch",
]

[project.optional-dependencies]
test = [
  "pytest",
  "httpx",
  "openai-whisper",
]

[tool.setuptools.packages.find]
include = ["tinytalk*"]

[tool.setuptools.dynamic]
version = { attr = "tinytalk.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
